[package]
name = "leafwing_input_playback"
description = "Input recording and mocking functionality for the Bevy game engine."
version = "0.4.0"
authors = ["Leafwing Studios"]
homepage = "https://leafwing-studios.com/"
repository = "https://github.com/leafwing-studios/leafwing_input_playback"
license = "MIT OR Apache-2.0"
edition = "2021"
categories = ["games", "game-development"]
keywords = ["bevy", "input"]
exclude = ["assets/**/*", "tools/**/*", ".github/**/*"]

[profile.dev]
# couldn't set to 3 because of https://github.com/bevyengine/bevy/issues/10524
opt-level = 2

[workspace]
members = ["./", "tools/ci"]

[features]
default = []

[dependencies]
bevy = {version ="0.12.0", features = ["serialize"]}
serde = {version = "1.0", features = ["derive"]}
ron = "*"

[lib]
name = "leafwing_input_playback"
path = "src/lib.rs"
